Dodane info w zamówieniach, zmiana wyswietlenia zamownia na malych urzadzeniach

--- a/e-commerce-app/src/app/core-components/order/order.component.html
+++ b/e-commerce-app/src/app/core-components/order/order.component.html
@@ -28,7 +28,7 @@
       <p>Your order will be sent immediately after the payment has been posted.</p> <br>
 
       <p>If You have any question please contact us.
-        <button mat-raised-button color="primary">
+        <button mat-raised-button color="primary" [routerLink]="['/contact']">
           <mat-icon>phone</mat-icon>
           <span>Contact</span>
         </button>
