--- a/e-commerce-app/src/app/core-components/user-orders/user-orders.component.html
+++ b/e-commerce-app/src/app/core-components/user-orders/user-orders.component.html
@@ -27,7 +27,7 @@
     </button>
   </div>
 
-  <div *ngIf="orders">
+  <div *ngIf="orders?.length > 0">
 
     <div class="text-center">
       <p>Here are yours orders. If you have not paid money yet, you can cancel your order.</p>
