--- a/e-commerce-app/src/app/core-components/header/header.component.html
+++ b/e-commerce-app/src/app/core-components/header/header.component.html
@@ -39,7 +39,7 @@
   <button mat-button (click)="cartNav.toggle()">
     <mat-icon>shopping_cart</mat-icon>
     <span fxHide.xs="true">Cart</span>
-    <span *ngIf="_cartService.orders.length > 0">({{_cartService.orders.length}} items)</span>
+    <span *ngIf="_cartService.orders.length > 0">({{_cartService.orders.length}})</span>
     <span *ngIf="_cartService.orders.length === 0">(empty)</span>
   </button>
 
@@ -58,15 +58,12 @@
 
 <!-- menu options -->
 <mat-menu #userSettings="matMenu">
-  <div mat-menu-item class="text-center">
-    Avatar
-  </div>
   <button mat-menu-item [routerLink]="['/profile']">
     <mat-icon>perm_identity</mat-icon>
     <span>Profile</span>
   </button>
   <button mat-menu-item [routerLink]="['/orders']">
-    <mat-icon>settings</mat-icon>
+    <mat-icon>history</mat-icon>
     <span>Order History</span>
   </button>
   <button mat-menu-item (click)="logout()">
