--- a/e-commerce-app/src/app/core-components/user-orders/user-orders.component.html
+++ b/e-commerce-app/src/app/core-components/user-orders/user-orders.component.html
@@ -3,7 +3,7 @@
 </div>
 
 
-<div class="" *ngIf="_authService.authenticated && !loading && user">
+<div class="" *ngIf="_authService.authenticated && !loading">
 
 
   asdsa
